# nobrainer-runner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
nobrainer_runner/: __init__.py  cli.py  profiles.py  results.py
nobrainer_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nobrainer_runner/backends/: aws.py  gcp.py  slurm.py
nobrainer_runner/tests/: test_cli.py  test_profiles.py  test_results.py  test_slurm.py
nobrainer_runner/tests/contract/: test_cli_contract.py
